# ati-axia-ethercat-ros2-control

./: .gitignore  README.md  README.zh-CN.md
ati_axia80_m20_ethercat_sensor/: CMakeLists.txt  README.md  README.zh-CN.md  package.xml
ati_axia80_m20_ethercat_sensor/config/: ati_axia80_m20_controllers.yaml
ati_axia80_m20_ethercat_sensor/dashboard/: dashboard.js  index.html  styles.css
ati_axia80_m20_ethercat_sensor/examples/: ati_axia80_m20_demo.urdf.xacro
ati_axia80_m20_ethercat_sensor/include/ati_axia80_m20_ethercat_sensor/: axia80_diagnostics.hpp  axia80_ethercat_config.hpp  axia80_ethercat_driver.hpp  axia80_m20_ethercat_sensor.hpp
ati_axia80_m20_ethercat_sensor/launch/: ati_axia80_m20_demo.launch.py  ati_axia80_m20_full.launch.py
ati_axia80_m20_ethercat_sensor/ros2_control/: ati_axia80_m20_ethercat_sensor.xml  ati_axia80_m20_params.yaml
ati_axia80_m20_ethercat_sensor/scripts/: axia80_monitor_node.py
ati_axia80_m20_ethercat_sensor/src/: axia80_diagnostics.cpp  axia80_ethercat_config.cpp  axia80_ethercat_driver.cpp  axia80_m20_ethercat_sensor.cpp
ati_axia80_m20_ethercat_sensor/test/: test_axia80_diagnostics.cpp
ati_axia80_m20_ethercat_sensor/urdf/: ati_axia80_m20_ethercat_sensor.xacro
